fix for viewing page on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,3 +42,16 @@ a {
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {
     width: 100%;
 }
+
+@media (max-width: 767px) {
+    .navbar-fixed-top {
+        position: relative;
+        top: auto;
+    }
+    .navbar-collapse {
+        max-height: none;
+    }
+    body {
+        margin: 0;
+    }
+}
